<resources>
    <string name="app_name">Example</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android Apps Portfolio!</string>
    <string name="app1_title">Spotify Streamer</string>
    <string name="app2_title">Scores App</string>
    <string name="app3_title">Library App</string>
    <string name="app4_title">Build It Bigger</string>
    <string name="app5_title">XYZ Reader</string>
    <string name="app6_title">Capstone: My Own App</string>

</resources>
