<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#fffbfff8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/headTittle"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff0b02"
        android:textSize="@dimen/abc_dialog_padding_material"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headTittle"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app1_title"
            android:id="@+id/spotifyLauncher"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#ffffebee"
            android:textColor="#ff000000"
            android:onClick="showToast" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app2_title"
            android:id="@+id/ScoresLauncher"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#FFCDD2"
            android:textColor="#ff000000"
            android:onClick="showToast" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app3_title"
            android:id="@+id/libraryLauncher"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#EF9A9A"
            android:textColor="#ff000000"
            android:onClick="showToast" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app4_title"
            android:id="@+id/buildItLauncher"
            android:layout_row="3"
            android:layout_column="0"
            android:background="#E57373"
            android:textColor="#ff000000"
            android:onClick="showToast" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app5_title"
            android:id="@+id/xyzLauncher"
            android:layout_row="4"
            android:layout_column="0"
            android:background="#EF5350"
            android:textColor="#ff000000"
            android:onClick="showToast" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/app6_title"
            android:id="@+id/myownLauncher"
            android:layout_row="5"
            android:layout_column="0"
            android:background="#F44336"
            android:textColor="#ff000000"
            android:onClick="showToast" />
    </GridLayout>
</RelativeLayout>
